@@ -542,9 +542,9 @@ INT fasp_solver_dcsr_krylov_amg (dCSRmat    *A,
         switch (amgparam->cycle_type) {
             case AMLI_CYCLE: // AMLI cycle
                 pc.fct = fasp_precond_amli; break;
-            case NL_AMLI_CYCLE: // Nonlinear AMLI AMG
+            case NL_AMLI_CYCLE: // Nonlinear AMLI
                 pc.fct = fasp_precond_namli; break;
-            default: // V,W-Cycle AMG
+            default: // V,W-cycles or hybrid cycles
                 pc.fct = fasp_precond_amg;
         }
     }
