@@ -1,10 +1,11 @@
 File Name: CHANGES
 
-12/02/2020 FASP 2.5.7:
+12/15/2020 FASP 2.5.7:
 - Check trivial solution case Ax=0 for AMG cycles.
 - Update cmake required version.
 - Update cmake CC search list.
 - Do not check for Doxygen by default.
+- Add VW and WV hybrid cycles.
 
 11/04/2020 FASP 2.5.6:
 - Fix new warnings in GCC10.
